--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.4"
-    }
+    },
+    "version": "1.0.0",
+    "scripts": {
+        "test": "php -d xdebug.mode=coverage ./vendor/bin/phpunit --testdox --colors=always --coverage-html coverage --coverage-clover coverage/coverage.xml --testdox-html coverage/testdox.html && npx badger --phpunit ./coverage/coverage.xml && npx badger --version ./composer.json && npx badger --license ./composer.json"
+    },
+    "license": "GPL-3.0-or-later"
 }
