--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
             "Luma\\FormComponent\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/PHP/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^11.4"
     },
