--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     "scripts": {
         "test": "php -d xdebug.mode=coverage ./vendor/bin/phpunit --testdox --colors=always --coverage-html coverage --coverage-clover coverage/coverage.xml --testdox-html coverage/testdox.html && npx badger --phpunit ./coverage/coverage.xml && npx badger --version ./composer.json && npx badger --license ./composer.json"
     },
-    "license": "GPL-3.0-or-later"
+    "license": "GPL-3.0-or-later",
+    "require": {
+        "lumax/framework-component": "^1.6"
+    }
 }
